--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,22 @@
+// utils
 @import "./utils/variables";
+@import "./utils/visually-hidden";
+
+// base
+@import "./base/common";
+@import "./base/container";
+
+// components
+@import "./components/header";
+@import "./components/logo";
+@import "./components/navigation";
+@import "./components/auth";
+@import "./components/hero";
+@import "./components/modal-form";
+@import "./components/features";
+@import "./components/examples";
+@import "./components/team";
+@import "./components/clients";
+@import "./components/footer";
+
+
