--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,5 +18,7 @@
 @import "./components/team";
 @import "./components/clients";
 @import "./components/footer";
+@import "./components/footer-subscr";
+
 
 
