--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,7 +18,10 @@
 @import "./components/team";
 @import "./components/clients";
 @import "./components/footer";
+@import "./components/footer-logo";
 @import "./components/footer-subscr";
-
+@import "./components/portfolio";
+@import "./components/portfolio-btn";
+@import "./components/portfolio-projects";
 
 
