--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,14 @@ img {
   height: auto;
 }
 
+.list {
+  list-style: none;
+}
+
+.link {
+  text-decoration: none;
+}
+
 .container {
   width: 1200px;
   margin: 0 auto;
@@ -87,19 +95,6 @@ img {
           align-items: center;
 }
 
-.header .list {
-  list-style: none;
-}
-
-.header .link {
-  text-decoration: none;
-}
-
-.header .link:hover,
-.header .link:focus {
-  color: var(--accent-color);
-}
-
 /* header logo */
 .logo {
   display: block;
@@ -108,7 +103,7 @@ img {
   padding-bottom: 25px;
 }
 
-.logo-web {
+.logo__web {
   font-family: "Raleway";
   font-weight: 700;
   font-size: 26px;
@@ -117,7 +112,7 @@ img {
   color: var(--accent-color);
 }
 
-.logo-studio {
+.logo__studio {
   font-family: "Raleway";
   font-weight: 700;
   font-size: 26px;
@@ -134,15 +129,14 @@ img {
   /* align-items: flex-start; */
 }
 
-.header-item:not(:last-child) {
+.site-nav__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.site-nav .link {
+.site-nav__link {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
-  text-decoration: none;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -159,18 +153,18 @@ img {
   border-radius: 2px; */
 }
 
-.site-nav .link:hover,
-.site-nav .link:focus {
+.site-nav__link:hover,
+.site-nav__link:focus {
   color: var(--accent-color);
 }
 
-.site-nav .link.current {
+.site-nav__link.current {
   color: var(--accent-color);
   position: relative;
   /* border-bottom: 4px solid var(--accent-color); */
 }
 
-.site-nav .link.current::after {
+.site-nav__link.current::after {
   content: "";
   position: absolute;
   width: 100%;
@@ -181,7 +175,7 @@ img {
   border-radius: 2px;
 }
 
-/* auth */
+/* authentication */
 .auth-nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -189,18 +183,17 @@ img {
   margin-left: auto;
 }
 
-.auth-nav-item:not(:last-child) {
+.auth-nav__item:not(:last-child) {
   margin-right: 30px;
 }
 
-.auth-nav .contacts-link {
+.auth-nav__link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   padding-top: 32px;
   padding-bottom: 32px;
   color: var(--color-text);
-  text-decoration: none;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -217,12 +210,12 @@ img {
   /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
-.auth-nav .contacts-link:hover,
-.auth-nav .contacts-link:focus {
+.auth-nav__link:hover,
+.auth-nav__link:focus {
   color: var(--accent-color);
 }
 
-.contacts-icon {
+.auth-nav__icon {
   margin-right: 10px;
   fill: currentColor;
 }
@@ -244,7 +237,7 @@ img {
   background-color: var(--fourth-bg-color);
 }
 
-.hero-title {
+.hero__title {
   margin: 0 auto;
   max-width: 696px;
   color: var(--primary-white-color);
@@ -256,7 +249,7 @@ img {
   text-transform: uppercase;
 }
 
-.hero-button {
+.hero__button {
   display: inline-block;
   border: 1px solid transparent;
   padding: 10px 32px;
@@ -600,16 +593,7 @@ img {
   padding-bottom: 94px;
 }
 
-.section-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--second-color-text);
-}
-
-.features .list {
+.features__list {
   padding: 0;
   margin: 0;
   list-style: none;
@@ -620,15 +604,15 @@ img {
       flex-wrap: wrap;
 }
 
-.features-item {
+.features__item {
   width: calc((100% - 90px) / 4);
 }
 
-.features-item:not(:last-child) {
+.features__item:not(:last-child) {
   margin-right: 30px;
 }
 
-.features-icon {
+.features__img {
   /* display: flex; */
   padding: 25px 100px;
   margin-bottom: 30px;
@@ -639,7 +623,7 @@ img {
   align-items: center; */
 }
 
-.features-title {
+.features__subtitle {
   margin-top: 0;
   margin-bottom: 10px;
   font-weight: 700;
@@ -655,12 +639,18 @@ img {
   padding-bottom: 94px;
 }
 
-.examples .section-title {
+.examples__title {
   margin-top: 0;
   margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--second-color-text);
 }
 
-.examples .list {
+.examples__list {
   padding: 0;
   margin: 0;
   display: -webkit-box;
@@ -671,12 +661,12 @@ img {
   list-style: none;
 }
 
-.examples-item {
+.examples__item {
   position: relative;
   width: calc((100% - 60px) / 3);
 }
 
-.examples-dscr {
+.examples__dscr {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -702,7 +692,7 @@ img {
   color: var(--primary-white-color);
 }
 
-.examples-item:not(:last-child) {
+.examples__item:not(:last-child) {
   margin-right: 30px;
 }
 
@@ -714,11 +704,17 @@ img {
   text-align: center;
 }
 
-.team .section-title {
+.team__title {
   margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--second-color-text);
 }
 
-.team .list {
+.team__list {
   list-style: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -726,7 +722,7 @@ img {
   /* flex-wrap: wrap; */
 }
 
-.team-item {
+.team__item {
   padding-bottom: 30px;
   width: calc((100% - 90px) / 4);
   background-color: var(--primary-white-color);
@@ -735,11 +731,11 @@ img {
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-item:not(:last-child) {
+.team__item:not(:last-child) {
   margin-right: 30px;
 }
 
-.team-title {
+.team__subtitle {
   margin-top: 30px;
   margin-bottom: 10px;
   font-weight: 500;
@@ -750,7 +746,7 @@ img {
   color: var(--second-color-text);
 }
 
-.team-text {
+.team__text {
   margin-top: 0;
   margin-bottom: 16px;
   font-size: 16px;
@@ -758,7 +754,7 @@ img {
   text-align: center;
 }
 
-.team-list .social-icons {
+.social__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -767,16 +763,16 @@ img {
           justify-content: center;
 }
 
-.team-list .social-item {
+.social__item {
   width: 44px;
   height: 44px;
 }
 
-.team-list .social-item:not(:last-child) {
+.social__item:not(:last-child) {
   margin-right: 10px;
 }
 
-.team-list .social-link {
+.social__link {
   width: 100%;
   height: 100%;
   display: -webkit-box;
@@ -800,13 +796,13 @@ img {
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
-.team-list .social-link:hover,
-.team-list .social-link:focus {
+.social__link:hover,
+.social__link:focus {
   background-color: var(--accent-color);
   color: var(--primary-white-color);
 }
 
-.team-list .social-icon {
+.social__icon {
   fill: currentColor;
 }
 
@@ -816,11 +812,17 @@ img {
   padding-bottom: 94px;
 }
 
-.clients .section-title {
+.clients__title {
   margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--second-color-text);
 }
 
-.clients-list {
+.clients__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -830,16 +832,16 @@ img {
   list-style: none;
 }
 
-.clients-item {
+.clients__item {
   width: 170px;
   height: 92px;
 }
 
-.clients-item:not(:last-child) {
+.clients__item:not(:last-child) {
   margin-right: 30px;
 }
 
-.clients-link {
+.clients__link {
   width: 100%;
   height: 100%;
   display: -webkit-box;
@@ -864,13 +866,13 @@ img {
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
-.clients-link:hover,
-.clients-link:focus {
+.clients__link:hover,
+.clients__link:focus {
   border-color: var(--accent-color);
   color: var(--accent-color);
 }
 
-.clients-icon {
+.clients__icon {
   fill: currentColor;
 }
 
@@ -882,7 +884,7 @@ img {
 }
 
 /* address */
-.footer .list {
+.address__list {
   list-style: none;
   font-style: normal;
 }
@@ -898,7 +900,7 @@ img {
   margin-right: 70px;
 }
 
-.footer .link {
+.address__link {
   color: var(--primary-white-color);
   text-decoration: none;
   -webkit-transition-property: color;
@@ -910,16 +912,16 @@ img {
   /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
-.footer .link:hover,
-.footer .link:focus {
+.address__link:hover,
+.address__link:focus {
   color: var(--accent-color);
 }
 
-.footer-item:not(:last-child) {
+.address__item:not(:last-child) {
   margin-bottom: 9px;
 }
 
-.footer .contacts {
+.address__contacts {
   color: var(--secondary-white-color);
 }
 
@@ -1013,7 +1015,6 @@ img {
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--primary-white-color);
-  border-radius: 4px;
 }
 
 .footer-subscr {
