--- a/sass/components/_auth.scss
+++ b/sass/components/_auth.scss
@@ -1,17 +1,17 @@
-/* auth */
+/* authentication */
 .auth-nav {
   display: flex;
   margin-left: auto;
 }
-.auth-nav-item:not(:last-child) {
+.auth-nav__item:not(:last-child) {
   margin-right: 30px;
 }
-.auth-nav .contacts-link {
+.auth-nav__link {
   display: flex;
   padding-top: 32px;
   padding-bottom: 32px;
   color: var(--color-text);
-  text-decoration: none;
+  // text-decoration: none;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -22,11 +22,11 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
-.auth-nav .contacts-link:hover,
-.auth-nav .contacts-link:focus {
+.auth-nav__link:hover,
+.auth-nav__link:focus {
   color: var(--accent-color);
 }
-.contacts-icon {
+.auth-nav__icon {
   margin-right: 10px;
   fill: currentColor;
 }
