--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -3,22 +3,28 @@
   padding-top: 94px;
   padding-bottom: 94px;
 }
-.clients .section-title {
+.clients__title {
   margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--second-color-text);
 }
-.clients-list {
+.clients__list {
   display: flex;
   justify-content: center;
   list-style: none;
 }
-.clients-item {
+.clients__item {
   width: 170px;
   height: 92px;
 }
-.clients-item:not(:last-child) {
+.clients__item:not(:last-child) {
   margin-right: 30px;
 }
-.clients-link {
+.clients__link {
   width: 100%;
   height: 100%;
   display: flex;
@@ -33,11 +39,11 @@
   /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
-.clients-link:hover,
-.clients-link:focus {
+.clients__link:hover,
+.clients__link:focus {
   border-color: var(--accent-color);
   color: var(--accent-color);
 }
-.clients-icon {
+.clients__icon {
   fill: currentColor;
 }
