--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -6,7 +6,7 @@
 }
 
 /* address */
-.footer .list {
+.address__list {
   list-style: none;
   font-style: normal;
 }
@@ -17,7 +17,7 @@
   width: 231px;
   margin-right: 70px;
 }
-.footer .link {
+.address__link {
   color: var(--primary-white-color);
   text-decoration: none;
   transition-property: color;
@@ -25,14 +25,14 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
-.footer .link:hover,
-.footer .link:focus {
+.address__link:hover,
+.address__link:focus {
   color: var(--accent-color);
 }
-.footer-item:not(:last-child) {
+.address__item:not(:last-child) {
   margin-bottom: 9px;
 }
-.footer .contacts {
+.address__contacts {
   color: var(--secondary-white-color);
 }
 .footer-social-media {
