--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -5,7 +5,7 @@
   padding-top: 24px;
   padding-bottom: 25px;
 }
-.logo-web {
+.logo__web {
   font-family: "Raleway";
   font-weight: 700;
   font-size: 26px;
@@ -13,7 +13,7 @@
   letter-spacing: 0.03em;
   color: var(--accent-color);
 }
-.logo-studio {
+.logo__studio {
   font-family: "Raleway";
   font-weight: 700;
   font-size: 26px;
