--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -5,15 +5,21 @@
   background-color: var(--second-bg-color);
   text-align: center;
 }
-.team .section-title {
+.team__title {
   margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--second-color-text);
 }
-.team .list {
+.team__list {
   list-style: none;
   display: flex;
   /* flex-wrap: wrap; */
 }
-.team-item {
+.team__item {
   padding-bottom: 30px;
   width: calc((100% - 90px) / 4);
   background-color: var(--primary-white-color);
@@ -21,10 +27,10 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-.team-item:not(:last-child) {
+.team__item:not(:last-child) {
   margin-right: 30px;
 }
-.team-title {
+.team__subtitle {
   margin-top: 30px;
   margin-bottom: 10px;
   font-weight: 500;
@@ -34,25 +40,25 @@
   letter-spacing: 0.03em;
   color: var(--second-color-text);
 }
-.team-text {
+.team__text {
   margin-top: 0;
   margin-bottom: 16px;
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
 }
-.team-list .social-icons {
+.social__list {
   display: flex;
   justify-content: center;
 }
-.team-list .social-item {
+.social__item {
   width: 44px;
   height: 44px;
 }
-.team-list .social-item:not(:last-child) {
+.social__item:not(:last-child) {
   margin-right: 10px;
 }
-.team-list .social-link {
+.social__link {
   width: 100%;
   height: 100%;
   display: flex;
@@ -66,11 +72,11 @@
   /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
-.team-list .social-link:hover,
-.team-list .social-link:focus {
+.social__link:hover,
+.social__link:focus {
   background-color: var(--accent-color);
   color: var(--primary-white-color);
 }
-.team-list .social-icon {
+.social__icon {
   fill: currentColor;
 }
