--- a/css/main.css
+++ b/css/main.css
@@ -889,13 +889,13 @@ img {
   font-style: normal;
 }
 
-.footer-address-social {
+.footer__content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.footer-address-list {
+.footer__address {
   width: 231px;
   margin-right: 70px;
 }
@@ -925,12 +925,12 @@ img {
   color: var(--secondary-white-color);
 }
 
-.footer-social-media {
+.social-media {
   padding-top: 12px;
   width: 206px;
 }
 
-.footer-social-title {
+.social-madia__subtitle {
   margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
@@ -940,7 +940,7 @@ img {
   color: var(--primary-white-color);
 }
 
-.footer-social-list {
+.social-media__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -950,16 +950,16 @@ img {
   list-style: none;
 }
 
-.footer-social-item {
+.social-media__item {
   width: 44px;
   height: 44px;
 }
 
-.footer-social-item:not(:last-child) {
+.social-media__item:not(:last-child) {
   margin-right: 10px;
 }
 
-.footer-social-link {
+.social-media__link {
   width: 100%;
   height: 100%;
   display: -webkit-box;
@@ -984,36 +984,23 @@ img {
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
-.footer-social-link:hover,
-.footer-social-link:focus {
+.social-media__link:hover,
+.social-media__link:focus {
   background-color: var(--accent-color);
 }
 
-.footer-social-icon {
+.social-media__icon {
   fill: currentColor;
 }
 
 /* footer logo */
-.footer-logo {
-  display: inline-block;
+.footer__logo {
   margin-bottom: 20px;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
-.footer-logo-web {
-  font-family: "Raleway";
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: var(--accent-color);
-}
-
-.footer-logo-studio {
-  font-family: "Raleway";
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
+.logo__studio--white {
   color: var(--primary-white-color);
 }
 
