--- a/sass/components/_footer-subscr.scss
+++ b/sass/components/_footer-subscr.scss
@@ -1,11 +1,11 @@
-.footer-subscr {
+.subscr {
   display: block;
   margin-left: auto;
   padding-top: 12px;
   /* align-items: center; */
   width: 570px;
 }
-.footer-subscr-text {
+.subscr__text {
   margin-bottom: 20px;
   font-family: 'Roboto';
   font-style: normal;
@@ -16,10 +16,10 @@
   text-transform: uppercase;
   color: var(--primary-white-color);
 }
-.footer-input {
+.subscr__input {
   display: flex;
 }
-.footer-input-mail {
+.subscr__mail {
   padding: 15px 16px;
   width: 358px;
   height: 50px;
@@ -31,7 +31,7 @@
   border-radius: 4px;
   outline: transparent;
 }
-.footer-input-mail::placeholder {
+.subscr__mail::placeholder {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
@@ -42,7 +42,7 @@
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-.footer-subscr-btn {
+.subscr__btn {
   display: flex;
   align-items: center;
   text-align: center;
@@ -62,7 +62,7 @@
   letter-spacing: 0.06em;
   cursor: pointer;
 }
-.footer-subscr-icon {
+.subscr__icon {
   margin-left: 10px;
   fill: var(--primary-white-color);
 }
