--- a/css/main.css
+++ b/css/main.css
@@ -1151,11 +1151,8 @@ img {
   padding-bottom: 94px;
 }
 
-.portfolio .list {
-  list-style: none;
-}
-
-.portfolio-btn-list {
+/* button on portfolio */
+.portfolio__filtr {
   margin-bottom: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1167,8 +1164,7 @@ img {
   margin-right: auto;
 }
 
-/* button on portfolio */
-.button {
+.portfolio__button {
   padding: 6px 22px;
   display: inline-block;
   border: 1px solid transparent;
@@ -1193,12 +1189,12 @@ img {
   /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
-.portfolio-btn-item:not(:last-child) {
+.filtr__item:not(:last-child) {
   margin-right: 8px;
 }
 
-.button:hover,
-.button:focus {
+.portfolio__button:hover,
+.portfolio__button:focus {
   background-color: var(--accent-color);
   color: var(--primary-white-color);
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -1206,7 +1202,7 @@ img {
 }
 
 /* list of projects */
-.portfolio-list {
+.portfolio__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1214,21 +1210,21 @@ img {
       flex-wrap: wrap;
 }
 
-.portfolio-item {
+.portfolio__item {
   margin-right: 30px;
   margin-bottom: 30px;
   width: calc((100% - 60px) / 3);
 }
 
-.portfolio-item:nth-child(3n) {
+.portfolio__item:nth-child(3n) {
   margin-right: 0;
 }
 
-.portfolio-item:nth-last-child(-n+3) {
+.portfolio__item:nth-last-child(-n+3) {
   margin-bottom: 0px;
 }
 
-.portfolio-link {
+.portfolio__link {
   text-decoration: none;
   display: block;
   -webkit-transition-property: -webkit-box-shadow;
@@ -1241,17 +1237,17 @@ img {
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-link:hover {
+.portfolio__link:hover {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.img-wrapper {
+.portfolio__wrapper {
   position: relative;
   overflow: hidden;
 }
 
-.projects-img {
+.portfolio__img {
   display: block;
 }
 
@@ -1293,7 +1289,7 @@ img {
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-link:hover .portfolio-hidden-dscr {
+.portfolio__link:hover .portfolio-hidden-dscr {
   -webkit-transform: translateY(0);
           transform: translateY(0);
 }
@@ -1305,7 +1301,7 @@ img {
   border-bottom: 1px solid var(--border-second-color);
 }
 
-.portfolio-title {
+.portfolio__subtitle {
   margin-bottom: 4px;
   font-weight: 700;
   font-size: 18px;
@@ -1314,7 +1310,7 @@ img {
   color: var(--second-color-text);
 }
 
-.portfolio-text {
+.portfolio__text {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
