--- a/sass/components/_portfolio-btn.scss
+++ b/sass/components/_portfolio-btn.scss
@@ -1,5 +1,12 @@
 /* button on portfolio */
-.button {
+.portfolio__filtr {
+  margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+.portfolio__button {
   padding: 6px 22px;
   display: inline-block;
   border: 1px solid transparent;
@@ -18,11 +25,11 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
-.portfolio-btn-item:not(:last-child) {
+.filtr__item:not(:last-child) {
   margin-right: 8px;
 }
-.button:hover,
-.button:focus {
+.portfolio__button:hover,
+.portfolio__button:focus {
   background-color: var(--accent-color);
   color: var(--primary-white-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
