--- a/sass/components/_portfolio-projects.scss
+++ b/sass/components/_portfolio-projects.scss
@@ -1,35 +1,35 @@
 /* list of projects */
-.portfolio-list {
+.portfolio__list {
   display: flex;
   flex-wrap: wrap;
 }
-.portfolio-item {
+.portfolio__item {
   margin-right: 30px;
   margin-bottom: 30px;
   width: calc((100% - 60px) / 3);
 }
-.portfolio-item:nth-child(3n) {
+.portfolio__item:nth-child(3n) {
   margin-right: 0;
 }
-.portfolio-item:nth-last-child(-n + 3) {
+.portfolio__item:nth-last-child(-n + 3) {
   margin-bottom: 0px;
 }
-.portfolio-link {
+.portfolio__link {
   text-decoration: none;
   display: block;
   transition-property: box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-link:hover {
+.portfolio__link:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-.img-wrapper {
+.portfolio__wrapper {
   position: relative;
   overflow: hidden;
 }
-.projects-img {
+.portfolio__img {
   display: block;
 }
 .portfolio-hidden-dscr {
@@ -57,7 +57,7 @@
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-link:hover .portfolio-hidden-dscr {
+.portfolio__link:hover .portfolio-hidden-dscr {
   transform: translateY(0);
 }
 .portfolio-dscr {
@@ -66,7 +66,7 @@
   border-right: 1px solid var(--border-second-color);
   border-bottom: 1px solid var(--border-second-color);
 }
-.portfolio-title {
+.portfolio__subtitle {
   margin-bottom: 4px;
   font-weight: 700;
   font-size: 18px;
@@ -74,7 +74,7 @@
   letter-spacing: 0.06em;
   color: var(--second-color-text);
 }
-.portfolio-text {
+.portfolio__text {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
