--- a/sass/components/_portfolio-projects.scss
+++ b/sass/components/_portfolio-projects.scss
@@ -32,7 +32,7 @@
 .portfolio__img {
   display: block;
 }
-.portfolio-hidden-dscr {
+.portfolio__hidden-dscr {
   position: absolute;
   display: flex;
   justify-content: center;
@@ -57,10 +57,10 @@
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio__link:hover .portfolio-hidden-dscr {
+.portfolio__link:hover .portfolio__hidden-dscr {
   transform: translateY(0);
 }
-.portfolio-dscr {
+.portfolio__dscr {
   padding: 20px 24px;
   border-left: 1px solid var(--border-second-color);
   border-right: 1px solid var(--border-second-color);
