--- a/css/main.css
+++ b/css/main.css
@@ -344,7 +344,7 @@ img {
   pointer-events: none;
 }
 
-.modal-text {
+.modal__text {
   margin-bottom: 12px;
   font-family: "Roboto";
   font-style: normal;
@@ -356,7 +356,7 @@ img {
   color: var(--second-color-text);
 }
 
-.modal-form {
+.modal__form {
   position: relative;
 }
 
@@ -364,7 +364,7 @@ img {
   margin-bottom: 10px;
 }
 
-.modal-label {
+.modal__label {
   display: block;
   /* width: 100%; */
   margin-bottom: 4px;
@@ -381,7 +381,7 @@ img {
   position: relative;
 }
 
-.modal-input {
+.modal__input {
   padding: 0 12px 0 42px;
   width: 100%;
   height: 40px;
@@ -395,12 +395,12 @@ img {
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-input:focus {
+.modal__input:focus {
   outline: transparent;
   border: 1px solid var(--accent-color);
 }
 
-.modal-input:focus + .input-icon {
+.modal__input:focus + .input-icon {
   fill: var(--accent-color);
 }
 
@@ -424,7 +424,7 @@ img {
   margin-bottom: 20px;
 }
 
-.modal-textarea {
+.modal__textarea {
   display: block;
   width: 100%;
   height: 120px;
@@ -440,7 +440,7 @@ img {
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-textarea::-webkit-input-placeholder {
+.modal__textarea::-webkit-input-placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
@@ -448,7 +448,7 @@ img {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.modal-textarea::-moz-placeholder {
+.modal__textarea::-moz-placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
@@ -456,7 +456,7 @@ img {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.modal-textarea:-ms-input-placeholder {
+.modal__textarea:-ms-input-placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
@@ -464,7 +464,7 @@ img {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.modal-textarea::-ms-input-placeholder {
+.modal__textarea::-ms-input-placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
@@ -472,7 +472,7 @@ img {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.modal-textarea::placeholder {
+.modal__textarea::placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
@@ -480,7 +480,7 @@ img {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.modal-textarea:focus {
+.modal__textarea:focus {
   outline: 1px solid transparent;
   border: 1px solid var(--accent-color);
 }
@@ -554,7 +554,7 @@ img {
   color: var(--accent-color);
 }
 
-.modal-button {
+.modal__button {
   position: absolute;
   left: 50%;
   -webkit-transform: translateX(-50%);
@@ -582,8 +582,8 @@ img {
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-button:hover,
-.modal-button:focus {
+.modal__button:hover,
+.modal__button:focus {
   background-color: #188ce8;
 }
 
