--- a/css/main.css
+++ b/css/main.css
@@ -144,17 +144,12 @@ img {
   color: var(--second-color-text);
   -webkit-transition-property: color;
   transition-property: color;
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
+  -webkit-transition-duration: 1250ms;
+          transition-duration: 1250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
-  /* border-bottom: 4px solid transparent;
-  border-radius: 2px; */
 }
-
-.site-nav__link:hover,
-.site-nav__link:focus {
+.site-nav__link:hover, .site-nav__link:focus {
   color: var(--accent-color);
 }
 
@@ -163,7 +158,6 @@ img {
   position: relative;
   /* border-bottom: 4px solid var(--accent-color); */
 }
-
 .site-nav__link.current::after {
   content: "";
   position: absolute;
@@ -203,15 +197,12 @@ img {
           align-items: center;
   -webkit-transition-property: color;
   transition-property: color;
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
+  -webkit-transition-duration: 1250ms;
+          transition-duration: 1250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
-
-.auth-nav__link:hover,
-.auth-nav__link:focus {
+.auth-nav__link:hover, .auth-nav__link:focus {
   color: var(--accent-color);
 }
 
@@ -607,7 +598,6 @@ img {
 .features__item {
   width: calc((100% - 90px) / 4);
 }
-
 .features__item:not(:last-child) {
   margin-right: 30px;
 }
@@ -665,6 +655,9 @@ img {
   position: relative;
   width: calc((100% - 60px) / 3);
 }
+.examples__item:not(:last-child) {
+  margin-right: 30px;
+}
 
 .examples__dscr {
   display: -webkit-box;
@@ -690,10 +683,6 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--primary-white-color);
-}
-
-.examples__item:not(:last-child) {
-  margin-right: 30px;
 }
 
 /* our team */
