--- a/sass/components/_auth.scss
+++ b/sass/components/_auth.scss
@@ -17,14 +17,11 @@
   line-height: 1.14;
   letter-spacing: 0.02em;
   align-items: center;
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
-}
-.auth-nav__link:hover,
-.auth-nav__link:focus {
-  color: var(--accent-color);
+  @include transition(color);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 .auth-nav__icon {
   margin-right: 10px;
