--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -16,29 +16,22 @@
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--second-color-text);
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
-  /* border-bottom: 4px solid transparent;
-  border-radius: 2px; */
-}
-.site-nav__link:hover,
-.site-nav__link:focus {
-  color: var(--accent-color);
+  @include transition(color);
+  &:hover,
+  &:focus {color: var(--accent-color);}
 }
 .site-nav__link.current {
   color: var(--accent-color);
   position: relative;
   /* border-bottom: 4px solid var(--accent-color); */
-}
-.site-nav__link.current::after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  /* height: 4px; */
-  bottom: -1.5px;
-  left: 0;
-  border-bottom: 4px solid var(--accent-color);
-  border-radius: 2px;
+  &::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    /* height: 4px; */
+    bottom: -1.5px;
+    left: 0;
+    border-bottom: 4px solid var(--accent-color);
+    border-radius: 2px;
+  }
 }
