--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 // utils
 @import "./utils/variables";
 @import "./utils/visually-hidden";
+@import "./utils/mixins";
 
 // base
 @import "./base/common";
