--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,4 @@
-:root {
-  --color-text: #757575;
-  --second-color-text: #212121;
-  --third-color-text: #000000;
-  --second-bg-color: #f5f4fa;
-  --third-bg-color: #2f303a;
-  --fourth-bg-color: #c4c4c4;
-  --accent-color: #2196f3;
-  --border-color: #ececec;
-  --border-second-color: #eeeeee;
-  --primary-white-color: #ffffff;
-  --secondary-white-color: rgba(255, 255, 255, 0.6);
-  --color-social-media: #afb1b8;
-  --primary-font: "Roboto", sans-serif;
-  --secondary-font: "Raleway", sans-serif;
-} /*# sourceMappingURL=variables.css.map */
+/*# sourceMappingURL=variables.css.map */
 .visually-hidden {
   position: absolute;
   white-space: nowrap;
@@ -50,13 +35,13 @@ ul {
 }
 
 body {
-  background-color: var(--primary-white-color);
+  background-color: #ffffff;
   font-family: "Roboto", sans-serif;
   font-style: normal;
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
-  color: var(--color-text);
+  color: #757575;
 }
 
 img {
@@ -82,8 +67,8 @@ img {
 
 /* header */
 .header {
-  background-color: var(--primary-white-color);
-  border-bottom: 1px solid var(--border-color);
+  background-color: #ffffff;
+  border-bottom: 1px solid #ececec;
 }
 
 .main-nav {
@@ -104,21 +89,21 @@ img {
 }
 
 .logo__web {
-  font-family: "Raleway";
+  font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .logo__studio {
-  font-family: "Raleway";
+  font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  color: var(--third-color-text);
+  color: #000000;
 }
 
 /* navigation */
@@ -141,7 +126,7 @@ img {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  color: var(--second-color-text);
+  color: #212121;
   -webkit-transition-property: color;
   transition-property: color;
   -webkit-transition-duration: 1250ms;
@@ -150,11 +135,11 @@ img {
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .site-nav__link:hover, .site-nav__link:focus {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .site-nav__link.current {
-  color: var(--accent-color);
+  color: #2196f3;
   position: relative;
   /* border-bottom: 4px solid var(--accent-color); */
 }
@@ -165,7 +150,7 @@ img {
   /* height: 4px; */
   bottom: -1.5px;
   left: 0;
-  border-bottom: 4px solid var(--accent-color);
+  border-bottom: 4px solid #2196f3;
   border-radius: 2px;
 }
 
@@ -187,7 +172,7 @@ img {
   display: flex;
   padding-top: 32px;
   padding-bottom: 32px;
-  color: var(--color-text);
+  color: #757575;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -203,7 +188,7 @@ img {
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .auth-nav__link:hover, .auth-nav__link:focus {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .auth-nav__icon {
@@ -225,13 +210,13 @@ img {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-color: var(--fourth-bg-color);
+  background-color: #c4c4c4;
 }
 
 .hero__title {
   margin: 0 auto;
   max-width: 696px;
-  color: var(--primary-white-color);
+  color: #ffffff;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -247,14 +232,14 @@ img {
   border-radius: 4px;
   margin-top: 30px;
   min-width: 216px;
-  background-color: var(--accent-color);
+  background-color: #2196f3;
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.9;
   text-align: center;
   letter-spacing: 0.06em;
-  color: var(--primary-white-color);
+  color: #ffffff;
   cursor: pointer;
 }
 
@@ -596,7 +581,7 @@ img {
 }
 
 .features__item {
-  width: calc((100% - 90px) / 4);
+  width: calc((100% - 30px * (4 - 1)) / 4);
 }
 .features__item:not(:last-child) {
   margin-right: 30px;
@@ -607,7 +592,7 @@ img {
   padding: 25px 100px;
   margin-bottom: 30px;
   height: 120px;
-  background-color: var(--second-bg-color);
+  background-color: #f5f4fa;
   border-radius: 4px;
   /* justify-content: center;
   align-items: center; */
@@ -621,7 +606,7 @@ img {
   line-height: 1.4;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--second-color-text);
+  color: #212121;
 }
 
 /* images of examples */
@@ -637,7 +622,7 @@ img {
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
-  color: var(--second-color-text);
+  color: #212121;
 }
 
 .examples__list {
@@ -653,7 +638,7 @@ img {
 
 .examples__item {
   position: relative;
-  width: calc((100% - 60px) / 3);
+  width: calc((100% - 30px * (3 - 1)) / 3);
 }
 .examples__item:not(:last-child) {
   margin-right: 30px;
@@ -682,14 +667,14 @@ img {
   text-align: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--primary-white-color);
+  color: #ffffff;
 }
 
 /* our team */
 .team {
   padding-top: 94px;
   padding-bottom: 94px;
-  background-color: var(--second-bg-color);
+  background-color: #f5f4fa;
   text-align: center;
 }
 
@@ -700,7 +685,7 @@ img {
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
-  color: var(--second-color-text);
+  color: #212121;
 }
 
 .team__list {
@@ -713,13 +698,12 @@ img {
 
 .team__item {
   padding-bottom: 30px;
-  width: calc((100% - 90px) / 4);
-  background-color: var(--primary-white-color);
+  width: calc((100% - 30px * (4 - 1)) / 4);
+  background-color: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-
 .team__item:not(:last-child) {
   margin-right: 30px;
 }
@@ -732,7 +716,7 @@ img {
   line-height: 1.19;
   text-align: center;
   letter-spacing: 0.03em;
-  color: var(--second-color-text);
+  color: #212121;
 }
 
 .team__text {
@@ -756,7 +740,6 @@ img {
   width: 44px;
   height: 44px;
 }
-
 .social__item:not(:last-child) {
   margin-right: 10px;
 }
@@ -773,22 +756,12 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  color: var(--color-social-media);
+  color: #afb1b8;
   border-radius: 50%;
-  -webkit-transition-property: color, background-color;
-  transition-property: color, background-color;
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
-  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
-
-.social__link:hover,
-.social__link:focus {
-  background-color: var(--accent-color);
-  color: var(--primary-white-color);
+.social__link:hover, .social__link:focus {
+  background-color: #2196f3;
+  color: #ffffff;
 }
 
 .social__icon {
