--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -15,13 +15,13 @@ ul {
   padding: 0;
 }
 body {
-  background-color: var(--primary-white-color);
-  font-family: "Roboto", sans-serif;
+  background-color: $primary-white-color;
+  font-family: $primary-font;
   font-style: normal;
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
-  color: var(--color-text);
+  color: $color-text;
 }
 img {
   display: block;
