--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -11,9 +11,10 @@
   flex-wrap: wrap;
 }
 .features__item {
-  width: calc((100% - 90px) / 4);
+  @include widthItem(4);
+  // width: calc((100% - 90px) / 4);
   &:not(:last-child) {
-    margin-right: 30px;
+    margin-right: $indent;
   }
 }
 .features__img {
@@ -21,7 +22,7 @@
   padding: 25px 100px;
   margin-bottom: 30px;
   height: 120px;
-  background-color: var(--second-bg-color);
+  background-color: $second-bg-color;
   border-radius: 4px;
   /* justify-content: center;
   align-items: center; */
@@ -34,5 +35,5 @@
   line-height: 1.4;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--second-color-text);
+  color: $second-color-text;
 }
