--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,7 +1,7 @@
 /* header */
 .header {
-  background-color: var(--primary-white-color);
-  border-bottom: 1px solid var(--border-color);
+  background-color: $primary-white-color;
+  border-bottom: 1px solid $border-color;
 }
 .main-nav {
   display: flex;
