--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -6,18 +6,18 @@
   padding-bottom: 25px;
 }
 .logo__web {
-  font-family: "Raleway";
+  font-family: $secondary-font;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  color: var(--accent-color);
+  color: $accent-color;
 }
 .logo__studio {
-  font-family: "Raleway";
+  font-family: $secondary-font;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  color: var(--third-color-text);
+  color: $third-color-text;
 }
