--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -10,7 +10,7 @@
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
-  color: var(--second-color-text);
+  color: $second-color-text;
 }
 .clients__list {
   display: flex;
@@ -20,9 +20,9 @@
 .clients__item {
   width: 170px;
   height: 92px;
-}
-.clients__item:not(:last-child) {
-  margin-right: 30px;
+  &:not(:last-child) {
+    margin-right: $indent;
+  }
 }
 .clients__link {
   width: 100%;
@@ -30,19 +30,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: var(--color-social-media);
-  border: 1px solid var(--color-social-media);
+  color: $color-social-media;
+  border: 1px solid $color-social-media;
   border-radius: 4px;
-  transition-property: color, border-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
-}
-.clients__link:hover,
-.clients__link:focus {
-  border-color: var(--accent-color);
-  color: var(--accent-color);
+  @include transition();
+  &:hover,
+  &:focus {
+    border-color: $accent-color;
+    color: $accent-color;
+  }
 }
 .clients__icon {
   fill: currentColor;
