--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -2,7 +2,7 @@
 .footer {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: var(--third-bg-color);
+  background-color: $third-bg-color;
 }
 
 /* address */
@@ -18,22 +18,20 @@
   margin-right: 70px;
 }
 .address__link {
-  color: var(--primary-white-color);
+  color: $primary-white-color;
   text-decoration: none;
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  @include transition();
   /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
-}
-.address__link:hover,
-.address__link:focus {
-  color: var(--accent-color);
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
 }
 .address__item:not(:last-child) {
   margin-bottom: 9px;
 }
 .address__contacts {
-  color: var(--secondary-white-color);
+  color: $secondary-white-color;
 }
 .social-media {
   padding-top: 12px;
@@ -46,7 +44,7 @@
   line-height: 16px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--primary-white-color);
+  color: $primary-white-color;
 }
 .social-media__list {
   display: flex;
@@ -66,7 +64,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: var(--primary-white-color);
+  color: $primary-white-color;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
   transition-property: color, background-color;
