--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -6,7 +6,7 @@
   left: 0px;
   top: 0px;
   background: rgba(0, 0, 0, 0.2);
-  transition: opacity 250ms, visibility 250ms;
+  @include transition(opacity, visibility);
 }
 .modal-backdrop.is-hidden .modal {
   transform: translate(-50%, -50%) scale(0.3);
