--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,8 +1,7 @@
-@mixin transition($property) {
-  // transition-property: $property;
-  // transition-duration: 1250ms;
-  // transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition: $property 1250ms cubic-bezier(0.4, 0, 0.2, 1);
+@mixin transition($property...) {
+  transition-property: $property;
+  transition-duration: 1250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 @mixin widthItem($items) {
   width: calc((100% - #{$indent} * (#{$items} - 1)) / #{$items});
