--- a/sass/components/_footer-logo.scss
+++ b/sass/components/_footer-logo.scss
@@ -19,5 +19,5 @@
   // font-size: 26px;
   // line-height: 1.19;
   // letter-spacing: 0.03em;
-  color: var(--primary-white-color);
+  color: $primary-white-color;
 }
