--- a/sass/components/_footer-subscr.scss
+++ b/sass/components/_footer-subscr.scss
@@ -7,14 +7,14 @@
 }
 .subscr__text {
   margin-bottom: 20px;
-  font-family: 'Roboto';
+  font-family: $primary-font;
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--primary-white-color);
+  color: $primary-white-color;
 }
 .subscr__input {
   display: flex;
@@ -24,23 +24,23 @@
   width: 358px;
   height: 50px;
   margin-right: 12px;
-  background-color: var(--third-bg-color);
-  color: rgba(255, 255, 255, 0.6);
+  background-color: $third-bg-color;
+  color: $secondary-white-color;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   outline: transparent;
-}
-.subscr__mail::placeholder {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.25;
-  display: flex;
-  align-items: center;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
+  &::placeholder {
+    font-family: $primary-font;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.03em;
+    color: $secondary-white-color;
+  }
 }
 .subscr__btn {
   display: flex;
@@ -49,12 +49,12 @@
   padding: 10px 28px;
   min-width: 200px;
   height: 50px;
-  color: var(--primary-white-color);
-  background-color: var(--accent-color);
+  color: $primary-white-color;
+  background-color: $accent-color;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-color: transparent;
   border-radius: 4px;
-  font-family: 'Roboto';
+  font-family: $primary-font;
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
@@ -64,5 +64,5 @@
 }
 .subscr__icon {
   margin-left: 10px;
-  fill: var(--primary-white-color);
+  fill: $primary-white-color;
 }
