--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -20,7 +20,7 @@
 .address__link {
   color: $primary-white-color;
   text-decoration: none;
-  @include transition();
+  @include transition(color);
   /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
   &:hover,
   &:focus {
@@ -54,9 +54,9 @@
 .social-media__item {
   width: 44px;
   height: 44px;
-}
-.social-media__item:not(:last-child) {
-  margin-right: 10px;
+  &:not(:last-child) {
+    margin-right: 10px;
+  }
 }
 .social-media__link {
   width: 100%;
@@ -67,15 +67,11 @@
   color: $primary-white-color;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
-  transition-property: color, background-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
-}
-.social-media__link:hover,
-.social-media__link:focus {
-  background-color: var(--accent-color);
+  @include transition(background-color);
+  &:hover,
+  &:focus {
+    background-color: $accent-color;
+  }
 }
 .social-media__icon {
   fill: currentColor;
