--- a/sass/components/_portfolio-projects.scss
+++ b/sass/components/_portfolio-projects.scss
@@ -4,26 +4,23 @@
   flex-wrap: wrap;
 }
 .portfolio__item {
-  margin-right: 30px;
-  margin-bottom: 30px;
-  width: calc((100% - 60px) / 3);
-}
-.portfolio__item:nth-child(3n) {
-  margin-right: 0;
-}
-.portfolio__item:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
+  margin-right: $indent;
+  margin-bottom: $indent;
+  @include widthItem(3);
+  &:nth-child(3n) {
+    margin-right: 0;
+  }
+  &:nth-last-child(-n + 3) {
+    margin-bottom: 0px;
+  }
 }
 .portfolio__link {
   text-decoration: none;
   display: block;
-  transition-property: box-shadow;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.portfolio__link:hover {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+  @include transition(box-shadow);
+  &:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
 .portfolio__wrapper {
   position: relative;
@@ -45,26 +42,24 @@
   right: 0;
   bottom: 0;
   background-color: rgba(33, 150, 243, 0.9);
-  font-family: "Roboto";
+  font-family: $primary-font;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
-  color: var(--primary-white-color);
+  color: $primary-white-color;
   transform: translateY(101%);
-  transition-property: transform;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  @include transition(transform);
 }
 .portfolio__link:hover .portfolio__hidden-dscr {
   transform: translateY(0);
 }
 .portfolio__dscr {
   padding: 20px 24px;
-  border-left: 1px solid var(--border-second-color);
-  border-right: 1px solid var(--border-second-color);
-  border-bottom: 1px solid var(--border-second-color);
+  border-left: 1px solid $border-second-color;
+  border-right: 1px solid $border-second-color;
+  border-bottom: 1px solid $border-second-color;
 }
 .portfolio__subtitle {
   margin-bottom: 4px;
@@ -72,11 +67,11 @@
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-  color: var(--second-color-text);
+  color: $second-color-text;
 }
 .portfolio__text {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
-  color: var(--color-text);
+  color: $color-text;
 }
